because madison wasn't here

--- a/src/Description
+++ b/src/Description
@@ -4,7 +4,7 @@ all of these screens broken up for you as gif images.
 These images are named Tile_RX_CYY, where the X is
 replaced by the row of the image, and Y is the column, with
 (0,0) being the top left hand corner of the map. There is
-a text file called titles.txt that describes what directions
+a text file called tiles.txt that describes what directions
 you are allowed to move when you are on a specific screen.
 A line in the textfile is as follows:
 Tile_R8_C8 TRUE TRUE FALSE TRUE
